--- a/bibliography.bib
+++ b/bibliography.bib
@@ -19,6 +19,14 @@
   year={2002},
 }
 
+@inproceedings{Mariano2002Performance,
+  title={Performance Evaluation of Object Detection Algorithms},
+  author={Mariano, Vladimir Y. and Min, Junghye and Park, Jin Hyeong and Kasturi, Rangachar and Mihalcik, David and Li, Huiping and Doermann, David and Drayer, Thomas},
+  booktitle={16 Th International Conference on Pattern Recognition},
+  pages={30965},
+  year={2002},
+}
+
 @article{Matas2004Robust,
   title={Robust wide-baseline stereo from maximally stable extremal regions},
   author={Matas, J. and Chum, O. and Urban, M. and Pajdla, T.},
