--- a/pages/chapter3.tex
+++ b/pages/chapter3.tex
@@ -31,14 +31,14 @@
 
     基于区域和基于连通部件的文字检测方法各有优缺点。其中，基于区域方法的检测结构可在噪声环境中精准提取到文字，这是因为这些方法在图像上大多采用滑动窗进行细致的探索，并执行多尺度的处理来提取特征。但相应地就会导致分类窗口过多，计算量太大，对时间性能的要求也更高；而另一类方法的处理目标是连通部件，其数量相比滑动窗要更可控，因此处理时间大为缩短，并且其检测到的结果可直接应用到识别文字的阶段。但此类方法的问题是在曝光或低对比度环境中难以从背景中分离出连通区域，并且过于依赖图像分割算法的结果。如何对这两类方法折衷，以在保证精准的文字检测效果的同时还能达到较高的效率，是一个值得深入研究的问题。
 
-    在基于区域的文字检测方法中主要有基于MSER 和基于边缘的这两类主流方法。MSER 类方法存在的问题有：当文字位于玻璃、浮雕等反光物体的表面时将无法作为极值区域被提取出来；采用ER树生成候选的文字区域会导致重复、嵌套和计算量过大等问题；用来过滤ER 的启发式规则用到许多固定阈值。而基于边缘的方法对图像边缘提取的结果比较敏感，如果存在背景与文字边缘粘连问题，或不能完整提取文字边缘时，就很难进行后续的文字检测的分析，并造成漏检问题。针对上述的这些问题，一种解决办法便是利用文字自身的双边属性，而采用基于边缘的方法对此属性进行最佳的表征，然后再融合上MSER的方法来提取候选文字的感兴趣区域proposals，最后在这些proposals中进行单尺度滑动窗的变化并输入到CNN 分类器中作分类。那么其中最关键的步骤就是解决背景与文字的边缘粘连问题，以提取出完整的文字边缘。
+    在基于连通部件的文字检测方法中主要有基于MSER 和基于边缘的这两类主流方法。MSER 类方法存在的问题有：当文字位于玻璃、浮雕等反光物体的表面时将无法作为极值区域被提取出来；采用ER树生成候选的文字区域会导致重复、嵌套和计算量过大等问题；用来过滤ER 的启发式规则用到许多固定阈值。而基于边缘的方法对图像边缘提取的结果比较敏感，如果存在背景与文字边缘粘连问题，或不能完整提取文字边缘时，就很难进行后续的文字检测的分析，并造成漏检问题。针对上述的这些问题，一种解决办法便是利用文字自身的双边属性，而采用基于边缘的方法对此属性进行最佳的表征，然后再融合上MSER的方法来提取候选文字的感兴趣区域proposals，最后在这些proposals中进行单尺度滑动窗的变化并输入到CNN 分类器中作分类。那么其中最关键的步骤就是解决背景与文字的边缘粘连问题，以提取出完整的文字边缘。
 
     依据以上提出的问题及对其的分析，本文提出了一种基于边缘骨架切割的文字检测方法。首先求取场景文字图片的边缘骨架图，并在其上利用8 连通域分析方法找到文字边缘和背景边缘的粘连点。然后自适应地断开这些粘连点，并将分离开来候选文字边缘骨架段输入到两阶段的CNN分类器中作文字与非文字的判别。最后提出一种结合MSER的局部迭代优化算法来提高文字检测的准确度。
 
     \section{方法原理与步骤}
     \esection{Principle and Summary of The Method}
 
-    基于边缘骨架切割的文字检测子的具体流程如图\ref{fig.c3_overview} 所示。首先对于输入的场景文字图片，利用结构化边缘检测方法\cite{Dollar2015Fast} 得到输入图片的结构化边缘响应图，如图\ref{fig.c3_overview}(b) 所示。然后基于一系列像素强度值阈值，对边缘响应图进行分割，得到相应的二值化边缘图。接着在每个二值边缘图上，通过细化操作得到其边缘骨架图，如图\ref{fig.c3_overview}(c) 所示。图中的红色结点是在边缘骨架上，通过8 领域内像素点分析所找到的边缘骨架结点。而文字边缘与背景间的粘连点，就存在于这些边缘骨架结点中。
+    基于边缘骨架切割的文字检测子的步骤示意图如图\ref{fig.c3_overview} 所示。首先对于输入的场景文字图片，利用结构化边缘检测方法\cite{Dollar2015Fast} 得到输入图片的结构化边缘响应图，如图\ref{fig.c3_overview}(b) 所示。然后基于一系列像素强度值阈值，对边缘响应图进行分割，得到相应的二值化边缘图。接着在每个二值边缘图上，通过细化操作得到其边缘骨架图，如图\ref{fig.c3_overview}(c) 所示。图中的红色结点是在边缘骨架上，通过8 领域内像素点分析所找到的边缘骨架结点。而文字边缘与背景间的粘连点，就存在于这些边缘骨架结点中。
     为了将文字边缘从背景杂质中切割出来，需要切割开这些边缘骨架结点，以解决文字边缘的粘连问题。而由不同的二值边缘图所生成的边缘骨架图上的结点是不同的。因此选择合适的边缘骨架图上的结点进行切割，是解决文字边缘粘连问题的核心步骤。
 
     \begin{figure*}[!h]
@@ -69,7 +69,7 @@
     \begin{minipage}[t]{0.22\linewidth}
     \centerline{ \small (h) 文字粗略定位结果}
     \end{minipage}
-    \caption{基于边缘骨架切割的文字检测方法的流程图}
+    \caption{基于边缘骨架切割的文字检测方法的步骤示意图}
     \label{fig.c3_overview}
     \end{figure*}
 
@@ -386,7 +386,7 @@
         \end{equation}
         其中$t_r$和$t_p$分别是$\sigma_{ij}$和$\tau_{ij}$的阈值，且$t_r,t_p \in [0,1]$。则在新的测评方法中，三种匹配方式有以下定义：
 
-        1）一个真实区域$G_i$只和1个检测区域$D_j$匹配，也就是1对1的匹配。这种匹配方式要满足的条件是：$G_i$的大部分只能被$D_j$检测出来，即$\sigma_{ij} \ge t_r$；且只有$D_j$对$G_i$的查准率符合要求，即$\tau_{ij} \ge t_p$。
+        1）一个真实区域$G_i$只和1个检测区域$D_j$ 匹配，也就是1对1的匹配。这种匹配方式要满足的条件是：$G_i$的大部分只能被$D_j$检测出来，即$\sigma_{ij} \ge t_r$；且只有$D_j$对$G_i$的查准率符合要求，即$\tau_{ij} \ge t_p$。
 
         2）一个真实区域$G_i$被检测区域集合D的子集$D_o$ 检测到了，也就是1对多的匹配。该匹配满足的条件有：$D_o$中的每个区域都能检出$G_i$的部分，即$\tau_{ij} \ge t_p,\forall j \in D_o$；并且$S_o$能检测到$G_i$的大部分，即$\sum_{j \in S_o} \sigma_{ij} \ge t_r$。
 
@@ -418,6 +418,7 @@
         方法 & 查全R & 查准P & F值 \\
         \hline
         \textbf{Proposed} & \textbf{76.21} & \textbf{86.79} & \textbf{81.16}(+3.3) \\
+        %\textbf{Proposed} & \textbf{76.21} & \textbf{86.79} & \textbf{81.16} \\
         Without \textbf{ILR} & 73.28 & 84.80 & 77.83 \\
         \hline
         Tian\cite{Tian2016Text} & 75.89 & 85.15 & 80.25 \\
