--- a/pages/chapter4.tex
+++ b/pages/chapter4.tex
@@ -48,7 +48,7 @@
     \section{方法原理与步骤}
     \esection{Principle and Summary of The Method}
 
-    基于二叉树搜索的文字检测方法的具体流程如图\ref{fig.c4_overview} 所示。对于输入的场景文字图片，首先利用上一章提出的基于边缘骨架切割的文字检测子\cite{He2017scene} 来提取粗略的文本行定位结果，如图\ref{fig.c4_overview}(b)所示：其中绿色的文字检测包围框大致覆盖住了文本行存在的位置，然而其定位结果还不够精准。为了进一步提高文字检测的精度，在本章中提出一种统计边缘响应算法，用来对图\ref{fig.c4_overview}(b)中的所有边缘响应进行统计运算，并显示成如图\ref{fig.c4_overview}(c) 所示的响应结果图。在该统计边缘响应图中，我们可以看出文字区域和背景区域间的响应获得了明显的划分：响应越大的区域是文字出现概率更高的位置，响应越微小的区域是背景或其它目标更可能存在的方位。并且从\ref{fig.c4_overview}(c)中还可以看出，各个文本行之间的响应也被明显区分开，因此在文本行响应之间呈现清晰的间隙。
+    基于二叉树搜索的文字检测方法的步骤示意如图\ref{fig.c4_overview} 所示。对于输入的场景文字图片，首先利用上一章提出的基于边缘骨架切割的文字检测子\cite{He2017scene} 来提取粗略的文本行定位结果，如图\ref{fig.c4_overview}(b)所示：其中绿色的文字检测包围框大致覆盖住了文本行存在的位置，然而其定位结果还不够精准。为了进一步提高文字检测的精度，在本章中提出一种统计边缘响应算法，用来对图\ref{fig.c4_overview}(b)中的所有边缘响应进行统计运算，并显示成如图\ref{fig.c4_overview}(c) 所示的响应结果图。在该统计边缘响应图中，我们可以看出文字区域和背景区域间的响应获得了明显的划分：响应越大的区域是文字出现概率更高的位置，响应越微小的区域是背景或其它目标更可能存在的方位。并且从\ref{fig.c4_overview}(c)中还可以看出，各个文本行之间的响应也被明显区分开，因此在文本行响应之间呈现清晰的间隙。
 
     \begin{figure*}[!h]
     \centering
@@ -72,7 +72,7 @@
     \begin{minipage}[t]{0.23\linewidth}
     \centerline{ \small (f) 细致定位结果}
     \end{minipage}
-    \caption{基于二叉树搜索的文本行定位优化的流程图}
+    \caption{基于二叉树搜索的文本行定位优化的步骤示意图}
     \label{fig.c4_overview}
     \end{figure*}
 
